--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,16 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
 
-@use "tailwindcss/base";
-@use "tailwindcss/components";
-@use "tailwindcss/utilities";
+@use 'tailwindcss/base';
+@use 'tailwindcss/components';
+@use 'tailwindcss/utilities';
+@import 'styles/colors.css';
 
 /* Estilos globales */
 :root {
-    --primary-color: #3b82f6;
-    --secondary-color: #6b7280;
-    --accent-color: #10b981;
-    --background-color: #ffffff;
-    --text-color: #1f2937;
+    --primary-color: #2C3E50;
+    --secondary-color: #3498DB;
+    --accent-color: #E74C3C;
+    --background-color: #ECF0F1;
+    --text-color: #95A5A6;
 
     /* Fuentes */
     --font-title-family: 'Arial', sans-serif;
