paragraph fonts bug fixed

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,6 +38,10 @@
     --font-paragraph-family: 'Arial', sans-serif;
     --font-paragraph-size: 1rem;
     --font-paragraph-color: var(--text-color);
+
+    --font-body-family: 'Arial', sans-serif;
+    --font-body-size: 1rem;
+    --font-body-color: var(--text-color);
 }
 
 body {
